--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                     <h3>Jonas Brand</h3>
                     <p>IT Consultant</p>
                     <h4>Würzburg, Deutschland</h4>
+                    <h3> Poker | Billard | Web Development 
                 </div>
             </div>
         </div>
